overlays/developer/search-topic-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search
spec:
  template:
    spec:
      containers:
        - name: search
